--- a/pages/checkout/checkout.html
+++ b/pages/checkout/checkout.html
@@ -25,22 +25,28 @@
         />
       </a>
       <ul class="menu__lista">
-        <li class="menu__item">
+        <li id="menuOne" class="menu__item">
           <a
+            onmouseover="mouseOverMenu()"
+            onmouseout="mouseOutMenu()"
             class="menu__linka"
             href="../lists/listBeers/listBeer.html"
             >CERVEJAS</a
           >
         </li>
-        <li class="menu__item">
+        <li id="menuTwo" class="menu__item">
           <a
+            onmouseover="mouseOverMenuTwo()"
+            onmouseout="mouseOutMenuTwo()"
             class="menu__linka"
             href="../lists/listAcessories/index.html"
             >ACESSÓRIOS</a
           >
         </li>
-        <li class="menu__item">
+        <li id="menuThree" class="menu__item">
           <a
+            onmouseover="mouseOverMenuThree()"
+            onmouseout="mouseOutMenuThree()"
             class="menu__linka"
             href="../lists/listKits/index.html"
             >KITS</a
@@ -51,8 +57,12 @@
 
     <nav class="redes">
       <ul class="menu__lista">
-        <li class="menu__item">
-          <a class="menu__link" href="../login/Login.html"
+        <li id="menuFour" class="menu__item">
+          <a
+            onmouseover="mouseOverMenuFour()"
+            onmouseout="mouseOutMenuFour()"
+            class="menu__link"
+            href="../login/Login.html"
             ><img
               class="redes__logo"
               alt="Login"
@@ -61,8 +71,12 @@
             LOGIN
           </a>
         </li>
-        <li class="menu__item">
-          <a class="menu__link" href="../signUp/signUp.html"
+        <li id="menuFive" class="menu__item">
+          <a
+            onmouseover="mouseOverMenuFive()"
+            onmouseout="mouseOutMenuFive()"
+            class="menu__link"
+            href="../shoppingCart/shoppingCart.html"
             ><img
               class="redes__logo"
               alt="Carrinho"
@@ -309,6 +323,7 @@
 			</p>
 		</footer>
 
-      <script src="./script--layout--checkout.js"></script>
+      <script src="./checkout.js"></script>
+      <script src="../../script.js"></script>
 </body>
 </html>
