--- a/pages/checkout/checkout.html
+++ b/pages/checkout/checkout.html
@@ -17,7 +17,7 @@
 <body>
   <header class="cabecalho">
     <nav class="menu">
-      <a class="menu__link" href="./homeStore.html"
+      <a class="menu__link" href="../homeStore/homeStore.html"
         ><img
           class="logo"
           alt="Logo Goró"
