feito alteração no portifolio

--- a/index.html
+++ b/index.html
@@ -318,15 +318,17 @@
 			</div>
 			<div id="show--info1" hidden>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Nunc posuere nisl sit amet erat sodales, ut dictum purus
-					posuere. Pellentesque aliquam faucibus pharetra.
-					Pellentesque eget efficitur sem. Suspendisse ut elit id
-					mauris blandit ultrices. Cras ultricies nisi ut luctus
-					aliquam. Nunc semper, mauris a lobortis rutrum, tortor velit
-					dapibus quam, a scelerisque est tortor ut eros. Duis lectus
-					augue, ultrices vel urna pharetra, consectetur aliquet
-					tellus.
+					A cerveja Pale Ale tem um teor alcoólico geralmente entre 4%
+					a 6% ABV e um corpo médio, com uma textura suave. Ao provar
+					uma Pale Ale, você pode esperar um sabor maltado com notas
+					de caramelo e torradas, equilibrado com um amargor moderado
+					do lúpulo, que pode ter sabores florais, frutados ou
+					terrosos.<br /><br />Essa cerveja é popular entre os amantes
+					de cervejas artesanais que procuram uma experiência de sabor
+					equilibrada, mas ainda assim com um pouco de amargor. É uma
+					cerveja versátil que pode ser apreciada sozinha ou
+					emparelhada com uma variedade de alimentos, desde carnes
+					grelhadas até pratos picantes.
 				</p>
 				<img
 					alt="info 1"
@@ -336,15 +338,17 @@
 			</div>
 			<div id="show--info2" class="show--info" hidden>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Nunc posuere nisl sit amet erat sodales, ut dictum purus
-					posuere. Pellentesque aliquam faucibus pharetra.
-					Pellentesque eget efficitur sem. Suspendisse ut elit id
-					mauris blandit ultrices. Cras ultricies nisi ut luctus
-					aliquam. Nunc semper, mauris a lobortis rutrum, tortor velit
-					dapibus quam, a scelerisque est tortor ut eros. Duis lectus
-					augue, ultrices vel urna pharetra, consectetur aliquet
-					tellus.
+					Uma Double IPA (India Pale Ale) é uma cerveja forte e
+					intensamente lupulada, com teor alcoólico geralmente
+					variando entre 7% a 10% ABV. Essa cerveja é caracterizada
+					por um amargor acentuado, que é equilibrado por um perfil de
+					malte rico e complexo. <br /><br />
+					Essa cerveja é muito popular entre os amantes de cerveja
+					artesanal que buscam uma experiência de sabor intensa e
+					complexa. Devido à sua alta graduação alcoólica e perfil de
+					sabor distintamente amargo, é uma cerveja mais apropriada
+					para beber devagar, apreciando cada gole e saboreando suas
+					nuances únicas.
 				</p>
 				<img
 					alt="info 2"
@@ -354,15 +358,15 @@
 			</div>
 			<div id="show--info3" hidden>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Nunc posuere nisl sit amet erat sodales, ut dictum purus
-					posuere. Pellentesque aliquam faucibus pharetra.
-					Pellentesque eget efficitur sem. Suspendisse ut elit id
-					mauris blandit ultrices. Cras ultricies nisi ut luctus
-					aliquam. Nunc semper, mauris a lobortis rutrum, tortor velit
-					dapibus quam, a scelerisque est tortor ut eros. Duis lectus
-					augue, ultrices vel urna pharetra, consectetur aliquet
-					tellus.
+					Uma cerveja Brown Ale é um estilo de cerveja que geralmente
+					tem uma coloração marrom clara a escura, com um corpo médio
+					e um sabor maltado suave. Com teor alcoólico entre 4% e 6%.
+					A cerveja tem um sabor maltado característico, com notas de
+					caramelo, toffee e chocolate, além de um ligeiro amargor
+					proveniente do lúpulo.<br /><br />Essa cerveja é popular
+					entre os apreciadores de cerveja artesanal que procuram uma
+					experiência de sabor mais suave e menos amarga além de
+					textura cremosa.
 				</p>
 				<img alt="info 3" src="./src/img/brown.png" class="img--info" />
 			</div>
@@ -406,7 +410,9 @@
 							litora torquent per conubia nostra, per inceptos
 							himenaeos.
 						</p>
-						<button class="btn-geral">BOTÃO</button>
+						<button class="btn-geral">
+							ENTRAR EM CONTATO COM A GORÓ
+						</button>
 					</div>
 				</div>
 			</section>
