Adicionando estados por meio de AJAX

--- a/pages/signUp/signUp.html
+++ b/pages/signUp/signUp.html
@@ -210,7 +210,9 @@
 				</div>
 				<div class="teste">
 					<input type="cidade" placeholder="Cidade" />
-					<input type="estado" placeholder="Estado" />
+					<select id="state">
+						<option class="select" disabled selected hidden>Selecione seu estado</option>
+					</select>
 				</div>
 				<div class="teste">
 					<input type="endereco" placeholder="Rua" />
