Mensagem de 'adicionado ao carrinho'

--- a/pages/lists/listAcessories/index.html
+++ b/pages/lists/listAcessories/index.html
@@ -15,6 +15,7 @@
     <link href="../../../src/css/cabecalho.css" rel="stylesheet" />
     <link href="../../../src/css/footer.css" rel="stylesheet" />
     <link href="../../../src/css/busca.css" rel="stylesheet" />
+    <script src="acessories.js"></script>
     <title>Lista de Produtos - Cerveja</title>
   </head>
 
@@ -190,9 +191,7 @@
                   alt="imagem da cerveja"
                 />
                 <div class="item--sacola">
-                  <a href="#"><img
-                    class="sacola"
-                    src="./Imagens/sacola.png"
+                  <a href="#"><img class="sacola" src="./Imagens/sacola.png"
                     alt="imagem sacola"
                   />
                   </a>
