--- a/pages/lists/listKits/index.html
+++ b/pages/lists/listKits/index.html
@@ -15,6 +15,7 @@
     <link href="../../../src/css/cabecalho.css" rel="stylesheet" />
     <link href="../../../src/css/footer.css" rel="stylesheet" />
     <link href="../../../src/css/busca.css" rel="stylesheet" />
+    <script src="kits.js"></script>
     <title>Lista de Produtos - Cerveja</title>
   </head>
 
