--- a/pages/search/search.html
+++ b/pages/search/search.html
@@ -15,6 +15,8 @@
 		<link href="../../src/css/cabecalho.css" rel="stylesheet" />
 		<link href="../../src/css/footer.css" rel="stylesheet" />
 		<link href="../../src/css/busca.css" rel="stylesheet" />
+
+
 		<title>Lista de produtos - resultado de busca</title>
 	</head>
 
@@ -29,22 +31,28 @@
 					/>
 				</a>
 				<ul class="menu__lista">
-					<li class="menu__item">
+					<li id="menuOne" class="menu__item">
 						<a
+							onmouseover="mouseOverMenu()"
+							onmouseout="mouseOutMenu()"
 							class="menu__linka"
 							href="../lists/listBeers/listBeer.html"
 							>CERVEJAS</a
 						>
 					</li>
-					<li class="menu__item">
+					<li id="menuTwo" class="menu__item">
 						<a
+						onmouseover="mouseOverMenuTwo()"
+						onmouseout="mouseOutMenuTwo()"
 							class="menu__linka"
 							href="../lists/listAcessories/index.html"
 							>ACESSÓRIOS</a
 						>
 					</li>
-					<li class="menu__item">
+					<li id="menuThree" class="menu__item">
 						<a
+							onmouseover="mouseOverMenuThree()"
+							onmouseout="mouseOutMenuThree()"
 							class="menu__linka"
 							href="../lists/listKits/index.html"
 							>KITS</a
@@ -55,8 +63,12 @@
 
 			<nav class="redes">
 				<ul class="menu__lista">
-					<li class="menu__item">
-						<a class="menu__link" href="../login/Login.html"
+					<li id="menuFour" class="menu__item">
+						
+						<a 
+						onmouseover="mouseOverMenuFour()"
+						onmouseout="mouseOutMenuFour()"
+						class="menu__link" href="../login/Login.html"
 							><img
 								class="redes__logo"
 								alt="Login"
@@ -65,8 +77,11 @@
 							LOGIN
 						</a>
 					</li>
-					<li class="menu__item">
-						<a class="menu__link" href="../signUp/signUp.html"
+					<li id="menuFive" class="menu__item">
+						<a
+						onmouseover="mouseOverMenuFive()"
+						onmouseout="mouseOutMenuFive()"
+						class="menu__link" href="../signUp/signUp.html"
 							><img
 								class="redes__logo"
 								alt="Carrinho"
@@ -494,5 +509,6 @@
 				0 - Cidade, ES
 			</p>
 		</footer>
+		<script src="./search.js"></script>
 	</body>
 </html>
