Alterarações feitas nos arquivos 404Error e search

--- a/pages/404/404.html
+++ b/pages/404/404.html
@@ -229,6 +229,6 @@
 				0 - Cidade, ES
 			</p>
 		</footer>
-		<script src="../../script.js"></script>
+		<script src="./404.js"></script>
 	</body>
 </html>
