--- a/pages/search/search.html
+++ b/pages/search/search.html
@@ -223,6 +223,8 @@
 								class="foto"
 								src="../../src/img/PRODUTOSKIT 1.png"
 								alt="imagem-cerveja"
+								onclick="changeImage('../../src/img/PRODUTOSKIT 1.png'); clickedImage('img-cerveja01')"
+								id ='img-cerveja01'
 							/>
 							<div class="item-sacola">
 								<a href="../shoppingCart/shoppingCart.html">
