--- a/pages/shoppingCart/shoppingCart.html
+++ b/pages/shoppingCart/shoppingCart.html
@@ -18,7 +18,7 @@
 			src="https://kit.fontawesome.com/8efdacdf0c.js"
 			crossorigin="anonymous"
 		></script>
-		<script src="script.js"></script>
+		<script src="../../script.js"></script>
     <title>Carrinho de compras</title>
 
 
@@ -29,7 +29,7 @@
     
      <div class="menu">
 		<a class="menu__link" href="./homeStore.html">
-			<img class="logo" alt="Logo Goró" src="./img/logo goro 1.svg" >
+			<img class="logo" alt="Logo Goró" src="../../src/img/logo goro 1.svg" >
 				</a>
 		<ul class="menu__lista">
 			<li class="menu__item">
@@ -46,12 +46,12 @@
 			<div>
 			<ul class="menu__profile">
 					<li class="log">
-					<img class="login" alt="login" src="./img/profile.svg">
+					<img class="login" alt="login" src="../../src/img//profile.svg">
 					<a class="login" href="../login/Login.htmlgit add">LOGIN</a>
 					</li>
 
 					<li class="car">
-					<img class="carrinho" alt="carrinho" src="./img/carrinho.svg">
+					<img class="carrinho" alt="carrinho" src="../../src/img//carrinho.svg">
 					<a class="carrinho" href="../shoppingCart/shoppingCart.html">CARRINHO</a>
 					</li>
 					
@@ -68,7 +68,7 @@
 	<section class="carrinho_compra">
 		<div class="header_carrinho">
 			<div class="titulo_carrinho">
-				<img class="carrinho2" alt="carrinho" src="./img/carrinho.svg">
+				<img class="carrinho2" alt="carrinho" src="../../src/img/carrinho.svg">
 				<h1 class="titulos"> CARRINHO DE COMPRAS</h1>
 			</div>
 			<button class="botao_preto" type="button">CONTINUAR COMPRANDO</button>
@@ -214,7 +214,7 @@
 
 			<section class="frete">
 				<div class="titulo_frete">
-				<img class="caminhao" src="./img/frete.svg">
+				<img class="caminhao" src="../../src/img/frete.svg">
 				<h3 class="CEP">DIGITE O CEP DO ENDEREÇO DE ENTREGA</h3>
 				</div>
 				<div class="valor_frete">
