--- a/pages/shoppingCart/shoppingCart.html
+++ b/pages/shoppingCart/shoppingCart.html
@@ -28,7 +28,7 @@
  <header class="cabecalho">
     
      <div class="menu">
-		<a class="menu__link" href="./homeStore.html">
+		<a class="menu__link" href="../homeStore.html">
 			<img class="logo" alt="Logo Goró" src="../../src/img/logo goro 1.svg" >
 				</a>
 		<ul class="menu__lista">
@@ -47,7 +47,7 @@
 			<ul class="menu__profile">
 					<li class="log">
 					<img class="login" alt="login" src="../../src/img//profile.svg">
-					<a class="login" href="../login/Login.htmlgit add">LOGIN</a>
+					<a class="login" href="../login/Login.html">LOGIN</a>
 					</li>
 
 					<li class="car">
