--- a/pages/shoppingCart/shoppingCart.html
+++ b/pages/shoppingCart/shoppingCart.html
@@ -14,11 +14,7 @@
     <title>Carrinho de compras</title>
 
 
-	<script
-			src="https://kit.fontawesome.com/8efdacdf0c.js"
-			crossorigin="anonymous"
-		></script>
-		<script src="../../script.js"></script>
+
     <title>Carrinho de compras</title>
 
 
@@ -28,7 +24,7 @@
  <header class="cabecalho">
     
      <div class="menu">
-		<a class="menu__link" href="../homeStore.html">
+		<a class="menu__link" href="../homeStore/homeStore.html">
 			<img class="logo" alt="Logo Goró" src="../../src/img/logo goro 1.svg" >
 				</a>
 		<ul class="menu__lista">
@@ -345,7 +341,13 @@
 				0 - Cidade, ES
 			</p>
 		</footer>
- 
+		
+		<script
+		src="https://kit.fontawesome.com/8efdacdf0c.js"
+		crossorigin="anonymous"
+	></script>
+	<script src="../../script.js"></script>
+
 </body>
 
 </html>
