ajuste do css footer e header, pode replicar pra todos

--- a/pages/shoppingCart/shoppingCart.html
+++ b/pages/shoppingCart/shoppingCart.html
@@ -219,7 +219,7 @@
 				</div>
 				<div class="valor_frete">
 					<input type="number" class="barra_cep"name="CEP" placeholder="ex: 00000-000">
-					<span>R$ 00,00</span>
+					<span id="valor_frete">R$ 00,00</span>
 				</div>
 			</section>
 
@@ -234,20 +234,18 @@
 				</div>
 				<span class="frete2">
 				<span class="subtil">FRETE</span>
-				<span>R$ 00,00</span>
+				<span id="frete_valor2">R$ 00,00</span>
 				</span>
 
-			<div id="linha-horizontal2">
+			<div id="linha-horizontal2"></div>
 
 				<div class="total_compra">
 				<span>TOTAL</span>
 				<span>R$ 00,00</span>
 				</div>
-				<div class="alinhamento_botao">
-				<div></div>
-				<div>
+				
 					<button class="botao_amarelo" type="button">FINALIZAR COMPRA</button>
-				</div>
+				
 			</div>
 			</div>
 			</div>
