ajuste do css footer e header, pode replicar pra todos

--- a/pages/shoppingCart/shoppingCart.html
+++ b/pages/shoppingCart/shoppingCart.html
@@ -77,23 +77,25 @@
 
 	<div id="linha-horizontal1"></div>
 
-		<section class="barra_carrinho">
+	<section class="barra_carrinho">
 		<div>
-			<h2 class="topo_carrinho1">PRODUTO</h2>
+		  <h2 class="topo_carrinho1">PRODUTO</h2>
 		</div>
 		<div>
-			<h2 class="topo_carrinho">
-				<li>
-				<h2>QUANTIDADE</h2>	
-				</li>
-				<li>
-				<h2>VALOR UNITÁRIO</h2>	
-				</li>
-				<li>
-				<h2>VALOR TOTAL</h2>	
-				</li>
-			</h2>
-		</section>
+		  <h2 class="topo_carrinho">
+			<li>
+			  <h2>QUANTIDADE</h2>	
+			</li>
+			<li>
+			  <h2>VALOR UNITÁRIO</h2>	
+			</li>
+			<li>
+			  <h2>VALOR TOTAL</h2>	
+			</li>
+		  </h2>
+		</div>
+	  </section>
+	  
 
 			<section class="compra">
 				<div class="produto">
@@ -218,7 +220,7 @@
 				<h3 class="CEP">DIGITE O CEP DO ENDEREÇO DE ENTREGA</h3>
 				</div>
 				<div class="valor_frete">
-					<input type="number" class="barra_cep"name="CEP" placeholder="ex: 00000-000">
+					<input type="number" class="barra_cep" name="CEP" placeholder="ex: 00000-000">
 					<span id="valor_frete">R$ 00,00</span>
 				</div>
 			</section>
@@ -326,19 +328,19 @@
 					</div>
 				</div>
 
-				<div class="footer__busca">
+				<div class="footer__email">
 					<p>
 						Inscreva-se na nossa Newsletter e receba as nossas
 						novidades em primeira mão.
 					</p>
-					<div class="busca__input">
-						<input type="text" placeholder="SEU E-MAIL" />
+					<div class="email__input">
+						<input id="email" type="email"  placeholder="SEU E-MAIL" />
 						<button>INSCREVER-SE</button>
 					</div>
 				</div>
 			</div>
 
-			<p>
+			<p id="CNPJ">
 				© 2022 CERVEJARIA GORÓ LTDA. 00.000.000/0001-00 | Rua dos Bobos,
 				0 - Cidade, ES
 			</p>
